Fixes to css for images and alignment Added new mock for icon blocks Updated tests to use mocks

--- a/app/components/cms_horizontal_card_component/cms_horizontal_card_component.scss
+++ b/app/components/cms_horizontal_card_component/cms_horizontal_card_component.scss
@@ -8,6 +8,7 @@
 
     @include govuk-media-query($until: desktop) {
       flex-direction: column;
+      align-items: start;
     }
   }
 
@@ -24,6 +25,11 @@
     @include govuk-media-query($until: desktop) {
       border-left: 0px;
       padding-left: 0px;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
     }
   }
 }
